Sugati/src/objects/Transfer_Option__c.object
<CustomObject>
    <description>Transfer and Car Hire Options</description>
    <fields>
        <fullName>TO_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Transfer Options</relationshipLabel>
        <relationshipName>Transfer_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TO_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TO_City_Code__c</fullName>
        <label>City Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TO_From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Transfer Options</relationshipLabel>
        <relationshipName>Transfer_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TO_To__c</fullName>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_Transfer_Code__c</fullName>
        <label>Transfer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_What_to_do__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>What to do</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>Transfer Options</relationshipLabel>
        <relationshipName>Transfer_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TO_Where_to_go__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where to go</label>
        <referenceTo>Where_to_go__c</referenceTo>
        <relationshipLabel>Transfer Options</relationshipLabel>
        <relationshipName>Transfer_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transfer Option</label>
    <nameField>
        <label>Transfer Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfer Options</pluralLabel>
    <recordTypes>
        <fullName>Car_Hire</fullName>
        <active>true</active>
        <label>Car Hire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transfer</fullName>
        <active>true</active>
        <label>Transfer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>